    but will complain about an invalid IP address.  Instead, mark the
    variable as seen, thereby letting netcfg calculate appropriate
    values.  This is the behaviour you'd expect for the netmask, but
    it's not ideal in the case of the gateway -- unfortunately, it seems
    it's impossible to create a preseed file that tells netcfg not to
    use a gateway (see #497285).
  * Add examples where either the IP address or DNS are missing to
    the test suite.

 -- Martin Michlmayr <tbm@cyrius.com>  Sun, 31 Aug 2008 17:33:26 +0300

oldsys-preseed (2.3) unstable; urgency=low

  * Don't prompt for missing NPE-B firmware to allow installations
    with USB Ethernet on the NSLU2 (see #496166).

 -- Martin Michlmayr <tbm@cyrius.com>  Sat, 23 Aug 2008 10:55:59 +0300

oldsys-preseed (2.2) unstable; urgency=low

  * No longer preseed debian-installer/locale to allow the selection
    of a language.  Closes: #491737.
  * Set DEBCONF_DROP_TRANSLATIONS=0 if we're not in lowmem mode so
    translations will be kept.
  * test suite: test for a (invalid) hostname containing space.

  [ Per Andersson ]
  * Fix parsing of the hostname on the Kurobox Pro: don't output the
    hostname twice, leading to an invalid preseed file.

 -- Martin Michlmayr <tbm@cyrius.com>  Sat, 16 Aug 2008 20:12:49 +0300

oldsys-preseed (2.1) unstable; urgency=low

  * Add support for the Buffalo Kurobox Pro.  Patch from Per Andersson
    as part of his Google Summer of Code project.

 -- Martin Michlmayr <tbm@cyrius.com>  Mon, 21 Jul 2008 12:58:32 +0300

oldsys-preseed (2.0) unstable; urgency=low

  * Use a static IP address when the configuration says so, even when
    this is the default value used by the original firmware.  In the
    past, oldsys-preseed would do DHCP in the assumption that the user
    never configured the static IP address and might not want to have
    that setting.  However, Mike (mwester) convinced me with his