@@ -19,6 +19,7 @@ if [ -e "$hostinfo" ]; then
 	HOSTNAME=$(sed -n '/^hostname/ {s/.*=//; p}' "$hostinfo")
 fi
 unset_matching_var "HOSTNAME" "KUROBOX-PRO"
+sanity_check_static_config
 if [ "$NET_CONFIG" != "static" ]; then
 	IPADDRESS=192.168.11.150
 	NETMASK=255.255.255.0
