@@ -14,6 +14,7 @@ HOSTNAME=$(remove_xml $(grep "<hostname>" $TEST_DIR/mv2120_static.nas_conf_db.xm
 unset_matching_var "HOSTNAME" "HPMediaVault"
 DOMAIN=$(remove_xml $(grep "<domain>" $TEST_DIR/mv2120_static.nas_conf_db.xml))
 unset_matching_var "DOMAIN" "local"
+sanity_check_static_config
 if [ "$NET_CONFIG" != "static" ]; then
 	IPADDRESS=192.168.1.100
 	NETMASK=255.255.255.0
