@@ -20,6 +20,7 @@ done
 MAC="00:08:9B:AC:72:F3"
 HOSTNAME=$(grep "Server Name" $TEST_DIR/qnap_static.conf | sed 's/^.* //')
 unset_matching_var "HOSTNAME" NAS$(echo "$MAC" | sed 's/^..:..:..://' | sed 's/://g')
+sanity_check_static_config
 if [ "$NET_CONFIG" != "static" ]; then
 	IPADDRESS=192.168.1.100
 	NETMASK=255.255.255.0
