@@ -16,6 +16,7 @@ else
 	NET_CONFIG=static
 	parse_ifconfig $path/mnt/cfg/cfg_nic0
 fi
+sanity_check_static_config
 if [ "$NET_CONFIG" != "static" ]; then
 	IPADDRESS=192.168.1.100
 	NETMASK=255.255.255.0
