@@ -8,6 +8,9 @@ oldsys-preseed (2.4) UNRELEASED; urgency=low
     it's not ideal in the case of the gateway -- unfortunately, it seems
     it's impossible to create a preseed file that tells netcfg not to
     use a gateway (see #497285).
+  * Add a sanity check for static IP configuration: netcfg will prompt
+    for an IP address and nameserver if they are not set, so use DHCP
+    in that case.
   * Add examples where either the IP address or DNS are missing to
     the test suite.
 
